SalesforceProject2/src/objects/Testing_Object__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberField1__c</fullName>
        <label>Number Field 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Field_2__c</fullName>
        <label>Number Field 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Text_Field__c</fullName>
        <defaultValue>&quot;Hi&quot;</defaultValue>
        <label>Required Text Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextField1__c</fullName>
        <label>Text Field 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Testing Object</label>
    <nameField>
        <displayFormat>TO-{000}</displayFormat>
        <label>Testing Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testing Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Number_Field_Validation_1</fullName>
        <active>true</active>
        <description>Fails when NumberField1 &gt; 99</description>
        <errorConditionFormula>NumberField1__c &gt; 100</errorConditionFormula>
        <errorMessage>NumberField1 is greater than 99</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule_with_division</fullName>
        <active>false</active>
        <errorConditionFormula>IF(ISNULL(Number_Field_2__c ), false, NumberField1__c /  Number_Field_2__c =3)</errorConditionFormula>
        <errorMessage>Incorrect values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Text_Field_1_Validation</fullName>
        <active>true</active>
        <description>Fails when TextField1__c = &quot;FAIL&quot;</description>
        <errorConditionFormula>TextField1__c = &quot;FAIL&quot;</errorConditionFormula>
        <errorMessage>TextField1 should not be &quot;FAIL&quot;</errorMessage>
    </validationRules>
</CustomObject>